# backend-service/src/swagger/swagger.json
@@ -115,49 +115,6 @@
           ]
         }
       },
-      "/api/v1/user/add-location": {
-        "post": {
-          "tags": [
-            "User"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "Created",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        }
-      },
       "/api/v1/user/update": {
         "put": {
           "tags": [
@@ -918,7 +875,7 @@
           ]
         }
       },
-      "/api/v1/order/get": {
+      "/api/v1/order/all": {
         "get": {
           "tags": [
             "Order"
@@ -1070,7 +1027,7 @@
           ]
         }
       },
-      "/api/v1/order/{productId}": {
+      "/api/v1/order/product/{productId}": {
         "get": {
           "tags": [
             "Order"
@@ -1085,6 +1042,52 @@
               "type": "string"
             }
           ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Order"
+                }
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "error": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                  }
+                }
+              }
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        }
+      },
+      "/api/v1/order/mine": {
+        "get": {
+          "tags": [
+            "Order"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [],
           "consumes": [
             "application/json"
           ],
@@ -1195,8 +1198,8 @@
             "example": "string"
           },
           "quantity": {
-            "type": "string",
-            "example": "string"
+            "type": "number",
+            "example": 0
           },
           "description": {
             "type": "string",
